[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://ObjectArt/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://Audio/blipSelect.wav" type="AudioStream" id=3]
[ext_resource path="res://RoomArt/gameboard_no_couch.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.711
anchor_right = 0.5
anchor_bottom = 0.711
margin_left = -152.0
margin_top = -160.6
margin_right = 152.0
margin_bottom = 163.4
rect_pivot_offset = Vector2( 68, 68 )
theme = ExtResource( 2 )
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 304.0
margin_bottom = 130.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../OptionButton")
text = "Start"
icon_align = 1

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 304.0
margin_bottom = 190.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../ExitButton")
text = "Options"
icon_align = 1

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 304.0
margin_bottom = 250.0
focus_neighbour_top = NodePath("../OptionButton")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Exit"
icon_align = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.521569, 0.658824, 0.760784, 1 )
position = Vector2( 511.278, 294.375 )
scale = Vector2( 4, 4 )
z_index = -40
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
